allow docbuilds to run on PRs as well

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,13 @@
 name: Aggregate
 on:
+  pull_request:
+    branches:
+      - main
+      - '**' # matches every branch
   push:
     branches:
       - main
+    tags: '*'
 jobs:
   aggregate:
     runs-on: ubuntu-latest
