--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,13 @@
 name: Aggregate
 on:
+  pull_request:
+    branches:
+      - main
+      - '**' # matches every branch
   push:
     branches:
       - main
+    tags: '*'
 jobs:
   aggregate:
     runs-on: ubuntu-latest
@@ -22,9 +27,9 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - name: Install dependencies
-        run: julia --project=. -e 'using Pkg; Pkg.instantiate()'
+        run: julia --project=docs/ -e 'using Pkg; Pkg.instantiate()'
       - name: Aggregate and deploy
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          julia --project=. docs/make.jl deploy
+          julia --project=docs/ docs/make.jl deploy
